# 2qt-positioning_location

./: .gitignore  makefile  pyproject.toml  requirements.txt
1st_ass/: convert.py  plot.py
2nd_ass/: read_data.py  similality.ipynb  similarity.py
2nd_ass/data/bg_oost_060/: accesspoint.txt
2nd_ass/data/bg_oost_430/: accesspoint.txt
2nd_ass/data/bklib/: accesspoint.txt
2nd_ass/data/cafe/: accesspoint.txt
2nd_ass/data/canteen/: accesspoint.txt
2nd_ass/data/entrance/: accesspoint.txt
2nd_ass/data/geolab/: accesspoint.txt
2nd_ass/data/half-floor/: accesspoint.txt
2nd_ass/data/halla/: accesspoint.txt
2nd_ass/data/hallb/: accesspoint.txt
2nd_ass/data/hallc/: accesspoint.txt
2nd_ass/data/halld/: accesspoint.txt
2nd_ass/data/hallf/: accesspoint.txt
2nd_ass/data/hallh/: accesspoint.txt
2nd_ass/data/hallm/: accesspoint.txt
2nd_ass/data/hallp/: accesspoint.txt
2nd_ass/data/hallq/: accesspoint.txt
2nd_ass/data/hallr/: accesspoint.txt
2nd_ass/data/hallu/: accesspoint.txt
2nd_ass/data/hallv/: accesspoint.txt
2nd_ass/data/hallway_urbanism_studio/: accesspoint.txt
2nd_ass/data/kelder_atelier/: accesspoint.txt
2nd_ass/data/ketelhuis_side/: accesspoint.txt
2nd_ass/data/management_stair/: accesspoint.txt
2nd_ass/data/orange/: accesspoint.txt
2nd_ass/data/serre/: accesspoint.txt
2nd_ass/data/shot_coffee_corner/: accesspoint.txt
2nd_ass/data/shot_geolab/: accesspoint.txt
2nd_ass/data/shot_hallm/: accesspoint.txt
3rd_ass/: common.py  nmea.py  transform.py
3rd_ass/data/: nmea.geojson  rtk.geojson
(+5 files in other folders)
