[tool.poetry]
name = "positioning-location"
version = "0.1.0"
description = ""
authors = ["HideBa <baba.papa1120.ba@gmail.com>"]
readme = "README.md"
packages = [{include = "positioning_location"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
jupyterlab = "^4.0.9"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
