[tool.poetry]
name = "positioning-location"
version = "0.1.0"
description = ""
authors = ["HideBa <baba.papa1120.ba@gmail.com>"]
readme = "README.md"
packages = [{include = "positioning_location"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
jupyterlab = "^4.0.9"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.6"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
